After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 688725 - Adwaita breaks Opera's menus and dialogs
Adwaita breaks Opera's menus and dialogs
Status: RESOLVED FIXED
Product: gnome-themes-standard
Classification: Core
Component: Adwaita GTK3 theme
3.6.x
Other Linux
: Normal major
: ---
Assigned To: gnome-themes-standard-maint
gnome-themes-standard-maint
Depends on:
Blocks:
 
 
Reported: 2012-11-20 13:33 UTC by Reda Lazri
Modified: 2012-11-24 20:36 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
:( (60.51 KB, image/png)
2012-11-20 13:33 UTC, Reda Lazri
Details

Description Reda Lazri 2012-11-20 13:33:37 UTC
Created attachment 229472 [details]
:(

Since 3.6 Adwaita has been making my Opera life harder. This does not happen using other themes. And weirdest part, using a theme called Adwaita-X-light/dark, this problem doesn't happen despite the theme being based on this version.

The screenshot is taken with HW accel. disabled. Enabling them will result in a no-background menus. Also, I have NVIDIA with the proprietary driver(in case it's relevant.
Comment 2 Cosimo Cecchi 2012-11-24 19:03:55 UTC
Thanks for the report, I pushed a fix for this now.
Comment 3 Reda Lazri 2012-11-24 20:36:33 UTC
You're awesome! :)