gtk2: don't forget to chain up if not overriding style

This fixes some rendering corruptions in Opera when used with the
Adwaita GTK2 theme.

https://bugzilla.gnome.org/show_bug.cgi?id=688725